# HealthInsurance

./: pyproject.toml  readme.md
assets/data/raw/: readme.md
report/: healthInsurance.tex  ref.bib
src/: eda.py  importAndClean.py  linearModel.py  main.py  visualize.py
src/tests/: test_eda.py  test_import.py  test_importAndClean.py  test_linearModel.py  test_visualize.py
